Date: 9999-99-99
  Changes:
    - Dropped support for game version 1.1.
    - Deconstruction planners from library are now fully supported for deconstructing unapproved ghosts.
    - Default control for construction planner has been changed to SHIFT + C to avoid collision with vanilla copper wire connection mode one.
  Features:
    - Added support for game version 2.0.
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2024-06-30
  Bugfixes:
    - Workaround for "Request from buffer chests" option not getting preserved during approvals/unapprovals (vanilla bug/behaviour).
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2024-06-24
  Changes:
    - Construction planner tool highlights and counts affected (unapproved) ghosts instead of placeholder ghosts. Works with both approval and unapproval.
    - Construction planner tool highlights affected ghosts using red outline (similar to what other vanilla planners do) instead of green.
    - Base game version requirement bumped to 1.1.86.
  Bugfixes:
    - Fixed entity duplication when blueprinting unapproved ghosts (due to changes introduced in Factorio 1.1.86).
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2022-10-19
  Changes:
    - Deconstruction planners from library no longer deconstruct unapproved ghosts.
  Bugfixes:
    - Fixed crash when player deconstructs area with deconstruction planner from game/player library due to mismatch between deconstruction force and player force.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2022-08-08
  Bugfixes:
    - Fixed crash when player places a bluperint using blueprint book from inventory.